# python-repository-cookiecutter

./: README.md
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: version.py
